[package]
name = "collatz_conjecture"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.5"
num-bigint = "0.4.6"
once_cell = "1.20.3"
lazy_static = "1.5.0"
log = "0.4.26"
num-traits = "0.2.19"

[dev-dependencies]
criterion = "0.5.1"
flamegraph = "0.6.7"

[lib]
name = "runners"
path = "src/lib.rs"

[[bench]]
name = "benchmark_runners"
harness = false
